# CaptchaKraken-cli

./: .env.example  .gitattributes  .gitignore  .gitmodules  .sparse-checkout-example  Dockerfile  PLAN.md  PLANNER_USAGE.md  README.md  build_container.sh  cli.py  debug_motorcycle.py  desiredFlow.txt  generate_visualization.py  inspect_img.py  measure_ollama.py  model_decisions.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_attention.py  test_debug_stats.py  test_label_positioning.py  test_ollama_vision.py  test_simplified_planner.py  test_slanted_new.py  test_solver_fix.py  test_w_extraction.py  tsconfig.json  verify_local_models.py
captchaimages/: hcaptcha_1766539373078.webm  llava_recaptcha_dataset.json  targetAreaPercentages.json
captchaimages/coreRecaptcha/: recaptchaAnswers.json
core/src/captchakraken/: cli.py  planner.py
latestDebugRun/: log.txt
scripts/: analyze_badge_colors.py  check_hw.py  debug_selected_fields.py  debug_stairs.py  generate_llava_dataset.py  install_models.sh  test_color_segmentation.py  test_detect_all.py  test_detection.py  test_dino_sam2.py  test_grid_detection.py  test_loading_detection.py  test_pointing.py  test_preprocessing.py  test_robust_detection.py  test_sam2_standalone.py  test_sam3_auto.py  test_specific_detection.py  visualize_video_union.py
src/: __init__.py  action_types.py  attention.py  cli.py  grid_planner.py  hardware.py  imagePreprocessing.py  image_processor.py  index.ts  overlay.py  planner.py  planner_types.py  preprocessing.py  server.py  solver.py  timing.py
src/captchakraken/: __init__.py  attention.py  cli.py  hardware.py  overlay.py  parser.py  planner.py  solver.py
src/tool_calls/: detect.py  find_checkbox.py  find_connected_elems.py  find_grid.py  segment.py  simulate_drag.py
tests/: conftest.py  repro_fire_hydrant_cv.py  test_checkbox_captcha.py  test_core_recaptcha.py  test_cv_improvements.py  test_grid_detection.py  test_grid_solver_robustness.py  test_image_grid_captcha.py  test_object_detection.py  test_omniparser_components.py  test_real_attention.py  test_real_planner.py  test_selected_fields.py  test_solver.py  test_specific_grid_captchas.py  test_stairs_ollama.py  test_street_lights_captcha.py  util_tests.py
